# ros2_gazebo

./: README.md  boat.parm  environment.sh  install_gymnasium.sh  start_ardu_sim.sh  start_mavros.sh
Docker/cpu/: Dockerfile
Docker/gpu/: Dockerfile
Gazebo/models/blueboat/: model.sdf
Gazebo/models/blueboat_camera/: model.config  model.sdf
Gazebo/models/blueboat_camera/d435_camera/: model.config  model.sdf
Gazebo/models/dock_station/: model.config  model.sdf
Gazebo/models/wamv_alpha/: model.config  model.sdf
Gazebo/models/wamv_new/: model.config  model.sdf
Gazebo/models/wamv_v1/: model.config  model.sdf
Gazebo/models/wamv_v1/meshes/: wamv_gazebo.urdf
Gazebo/models/wamv_v2/: model.config  model.sdf
Gazebo/models/wamv_v3/: model.config  model.sdf
Gazebo/worlds/lake/: model.config  model.sdf
gymnasium/: setup.py
gymnasium/gymnasium_arg/: __init__.py
gymnasium/gymnasium_arg/envs/: __init__.py  blueboat_rl2ac_v1.py  blueboat_v1.py  blueboat_v2.py  blueboat_v3.py  lunarlander_v3.py  math_usv_v1.py  math_usv_v2.py  multi_blueboat_v1.py  tmp.py  usv_v1.py  usv_v2.py  wamv_v1.py
gymnasium/gymnasium_arg/utils/: __init__.py  gz_model.py  gz_model_wamv_v1.py  gz_model_wamv_v2.py  gz_model_wamv_v3.py  vae.py  vae_model.py
rl/: keyboard_agent.py
rl/CPPO/: test_gymandsb3.py
rl/mipo/: .gitignore  test_gymandsb3.py  train_bbv3.py  train_math_pretrained.py  train_math_usv.py  train_pretrained.py  train_usv.py  train_usv_v2.py
rl/mmipo/: .gitignore  inference.py  train_lunarlande.py  train_math_pretrained.py  train_math_usv.py  train_pretrained.py  train_usv_v2.py
rl/ppo/: .gitignore  train_bbv1.py  train_bbv2.py  train_multi_bb_v1.py
ros2_ws/src/gz_entity_manager/: CMakeLists.txt  package.xml
ros2_ws/src/gz_entity_manager/src/: apply_force_torque.cpp  delete_entity.cpp  move_entity.cpp  spawn_entity.cpp  test.cpp
ros2_ws/src/veh_model/: setup.py
ros2_ws/src/veh_model/gz_bridges/blueboat/: train.yaml
ros2_ws/src/veh_model/gz_bridges/wamv_alpha/: test_propeller.yaml
ros2_ws/src/veh_model/launch/: gz_manager.launch.py  gz_world.launch.py  sim_joy.launch.py
ros2_ws/src/veh_model/launch/blueboat/: bb_gz.launch.py  blueboat_sim_joy.launch.py  sim_joy.launch.py  waves_gz.launch.py
ros2_ws/src/veh_model/launch/wamv_alpha/: wamv_alpha_gz.launch.py
ros2_ws/src/veh_model/launch/wamv_v1/: wamv_v1_sim_joy.launch.py
ros2_ws/src/veh_model/launch/wamv_v2/: wamv_v2_sim_joy.launch.py
ros2_ws/src/veh_model/models/wamv_v2/: multiInput_featureExtractor.py
ros2_ws/src/veh_model/rviz/: blueboat.rviz
ros2_ws/src/veh_model/veh_model/: joy2cmdvel.py
ros2_ws/src/veh_model/veh_model/blueboat/: acme_dp.py  gz_reset_node.py  joy2cmdvel.py  twist2thrust.py
ros2_ws/src/veh_model/veh_model/wamv_alpha/: twist2thrust.py
ros2_ws/src/veh_model/veh_model/wamv_v1/: acme_dp.py  sb3_dp.py  twist2thrust.py
ros2_ws/src/veh_model/veh_model/wamv_v2/: acme_dp.py  twist2thrust.py
ros2_ws/src/veh_model/worlds/: waves.sdf
ros2_ws/src/veh_model/worlds/no_visual_lake/: model.sdf
ros2_ws/src/veh_model/worlds/no_visual_lake/materials/: waves_fs.glsl
ros2_ws/src/veh_model/worlds/no_visual_waves/: model.config  model.sdf
ros2_ws/src/veh_model/worlds/no_visual_waves/materials/: waves_vs.glsl
sb3/: setup.py
sb3/sb3_arg/: __init__.py  bb_v1_extractor.py  gz_vec_env.py
sb3/sb3_arg/FeatureExtractor/: __init__.py  blueboat_feature_extractor.py  usv_cnn_based_feature_extractor.py  usv_feature_extractor.py  usv_gru_based_feature_extractor.py
sb3/sb3_arg/policy/: __init__.py  ipo.py  mipo.py  mmipo.py
scripts/: test.py  test_node.py
scripts/four_corner_test/: draw.py  four_corner_goal.py
scripts/plot/: .gitignore  curve.py  plot_tb_concation.py
